--- a/portfolio/portfolio-second/index.html
+++ b/portfolio/portfolio-second/index.html
@@ -25,6 +25,15 @@
 			src="https://kit.fontawesome.com/d64724f41e.js"
 			crossorigin="anonymous"
 		></script>
+		<script
+			type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+		></script>
+		<script type="text/javascript">
+			(function () {
+				emailjs.init("nRYBcfGTgniuIuvw3");
+			})();
+		</script>
 		<script type="text/javascript">
 			document.addEventListener("contextmenu", function (forbiddenS) {
 				forbiddenS.preventDefault();
